# Mokt

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  README.md  build.gradle.kts  docker-compose.yml  gradle.properties  settings.gradle.kts
authentication/: build.gradle.kts
authentication/src/commonMain/kotlin/dev/redtronics/mokt/: Auth.kt  Authentik.kt  GameAuth.kt  Keycloak.kt  Microsoft.kt  Mojang.kt  OAuth.kt  Provider.kt
authentication/src/commonMain/kotlin/net/davils/mokt/: GameAuth.kt  Keycloak.kt  Microsoft.kt  OAuth.kt  Provider.kt
authentication/src/commonTest/kotlin/dev/redtronics/mokt/: MicrosoftTest.kt
buildSrc/: build.gradle.kts  settings.gradle.kts
buildSrc/src/main/kotlin/: BuildConstantsConfiguration.kt  CInteropGeneration.kt  Compile.kt  Generation.kt  Os.kt  PatchVersions.kt  Project.kt  Sync.kt  mokt-build-constants.gradle.kts  mokt-cinterop-generation.gradle.kts  mokt-multiplatform.gradle.kts  mokt-publishing.gradle.kts
common/: build.gradle.kts
common/src/commonMain/kotlin/dev/redtronics/mokt/: Identifier.kt  System.kt
core/: build.gradle.kts
docs/: m.tree  writerside.cfg
docs/cfg/: buildprofiles.xml
docs/topics/: welcome.md
example/: build.gradle.kts
example/src/main/kotlin/: Main.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mokt-rust/: Cargo.toml  build.rs
mokt-rust-bindings/: Cargo.toml
mokt-rust/src/: browser.rs  lib.rs  system.rs
native-cinterop/: cinterop.def
provider/: authentik-compose.yml  keycloak-compose.yml
(+155 files in other folders)
