[package]
name = "mokt-rust-bindings"
description = "Native Rust bindings for Mokt."
authors = ["Nils Jäkel <nils.jaekel@redtronics.dev>", "David Ernst <david.ernst@redtronics.dev>"]
license = "MIT"
readme = "../README.md"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.27.0"

[dependencies]
libc = "0.2.162"
