[package]
name = "mokt"
description = "A Kotlin Multiplatform SDK for interaction with the Minecraft World."
authors = ["Davils <contact@davils.net>"]
license = "MIT"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
cbindgen = "0.27.0"
 
[dependencies]
libc = "0.2.167"